<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent" />

    <View
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="56dp"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <View
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="56dp"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <View
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="315dp"
        android:layout_marginTop="56dp"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/category"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:text="@string/type"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/price_tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"

                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textColor="@android:color/white"
                android:textSize="18sp" />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/category_spiner"
                android:layout_width="26dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/type_spiner"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/price_edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"

                android:gravity="center_horizontal"
                android:hint="$"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/holo_orange_light"
                android:textColorHint="@color/texthint"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="142dp"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <View
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="142dp"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <View
        android:layout_width="124dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="142dp"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="102dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/rums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Rooms"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/column"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Floors"
                android:layout_marginStart="69dp"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="80dp"
                android:text="@string/location"
                android:textColor="@android:color/white"
                android:textSize="18sp" />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <Spinner
                android:id="@+id/room_spinner"
                android:layout_width="93dp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/floor_spinner"
                android:layout_width="94dp"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp" />

            <Spinner
                android:id="@+id/location_spinner"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_marginStart="35dp"

                />
        </LinearLayout>

    </LinearLayout>


    <View
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="228dp"
    android:alpha="0.2"
    android:background="@android:color/black" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="190dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/adress_text"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Adress"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="12sp"
            android:hint="Example: 27 Ազատության պողոտա,"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/texthint" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="314dp"
        android:alpha="0.2"
        android:background="@android:color/black" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="274dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/desc_text"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Description"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/desc_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/example"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/texthint"
            />

        <ImageView
            android:id="@+id/add_images"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/add_images" />



        <android.support.v7.widget.RecyclerView
            android:id="@+id/statement_image_list"
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_gravity="bottom"
            android:layout_height="200dp">


        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
    <ImageView
        android:id="@+id/save_statement_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:background="@drawable/save" />

    

</RelativeLayout>