<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
         />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="56dp"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/search_category"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rentRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="RENT" />

                <RadioButton
                    android:id="@+id/saleRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"
                    android:text="SALE" />

                <RadioButton
                    android:id="@+id/hotelsRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"
                    android:text="HOTELS" />

            </RadioGroup>


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="152dp"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="112dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/type_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/search_type"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_appart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"

                android:textColor="@color/colorPrimaryDark"
                android:text="Apartments" />

            <CheckBox
                android:id="@+id/check_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:text="Houses" />

            <CheckBox
                android:id="@+id/check_comercial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:text="Commercial" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="248dp"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="208dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:text="@string/price"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/frome"
                android:layout_width="13dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="frome"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/holo_orange_light"
                android:textColorHint="@color/texthint"
                android:gravity="center_horizontal"
                 />

            <TextView
                android:id="@+id/midlle"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="---"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/to"
                android:layout_width="13dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="to"
                android:layout_marginHorizontal="20dp"

                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/holo_orange_light"
                android:textColorHint="@color/texthint"
                android:gravity="center_horizontal"
                />





        </LinearLayout>

    </LinearLayout>



    <View
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginStart="143dp"
        android:layout_marginTop="304dp"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="304dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/location"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginStart="50dp"
            android:gravity="center_horizontal"
            android:spinnerMode="dropdown"

            >

        </Spinner>

    </LinearLayout>


</RelativeLayout>